<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.AddMeetingActivity">
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinnerSubject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:hint="Sujet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/spinnerRoom"
                />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/spinnerRoom"
                android:layout_width="0dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_height="wrap_content"
                android:hint="Lieu"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerSubject"
                app:layout_constraintBottom_toTopOf="@id/inputParticipants"
                />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputParticipants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="Participants"
                app:layout_constraintEnd_toStartOf="@id/addParticipants"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/spinnerRoom"
                app:layout_constraintBottom_toTopOf="@id/listParticipants"
                />
            <Button
                android:id="@+id/addParticipants"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Ajouter"
                android:layout_margin="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/inputParticipants"
                app:layout_constraintTop_toBottomOf="@id/spinnerRoom"
                app:layout_constraintBottom_toTopOf="@id/listParticipants"
                />
            <TextView
                android:id="@+id/listParticipants"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:scrollbars = "vertical"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputParticipants"
                app:layout_constraintBottom_toTopOf="@id/hourPicker"
                />

            <TimePicker
                android:id="@+id/hourPicker"
                android:timePickerMode="spinner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/inputParticipants"
                app:layout_constraintBottom_toTopOf="@id/datePicker"
                />
            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:calendarViewShown="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/hourPicker"
                app:layout_constraintBottom_toTopOf="@id/addMeetingButton"
                />

            <Button
                android:id="@+id/addMeetingButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:text="Ajouter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/datePicker"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>